add Maven Failsafe plugin to run integration tests